External Stylesheet + Contact page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
 
-    <H1>My name is Gulnara</H1>
-    <p>And I have two pet rabbits at home.</p>
-    
+<head>
+  <title>Places to visit in Bak</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Places to visit in Baku">
+  <meta name="author" content="Gulnara Shahbazova">
+  <meta name="keywords" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="stylesheet.css" rel="stylesheet" type="text/css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+</head>
+
+<body>
+  <header>
+    <H2 class="logo">Discover <span>Baku</span></H2>
+    <nav>
+      <form class="search-box">
+        <input type="search" placeholder="Search">
+        <button type="submit"><i class="fa fa-search" id="search"></i></button>
+      </form>
+      <ul class="nav-bar">
+        <li>Home</li>
+        <li>Blog</li>
+        <li>About</li>
+        <li><a href="contact.html"> Contact </a> </li>
+      </ul>
+      <ul class="social-media">
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="article">
+    <H1>Places to visit in Baku</H1>
+    <H3>October 11, 2022</H3>
+    <a href="https://en.wikipedia.org/wiki/Old_City_(Baku)">
+      <H2>Walled City (Icheri Sheher)</H2>
+    </a>
+    <img src="images/walled-city.jpg" width="800" title="Walled City" alt="Walled City">
+    <p>
+      The Icheri Sheher, which is called the "Old City" by the local people, is a region that
+      travelers must include in their lists of places to visit in Baku, as it preserves many historical structures.
+      Inhabited since the Paleolithic era, the region was recognized as one of the World Heritage Sites in Danger in
+      2003, following its inclusion on the UNESCO World Heritage List in 2000. In the cobbled streets of the old town
+      there is a historic building of Hellenic.
+    </p>
+
+    <a href="https://en.wikipedia.org/wiki/Palace_of_the_Shirvanshahs">
+      <H2>Shirvanshahs Palace</H2>
+    </a>
+    <img src="images/Shirvanshahlar.jpg" width="800">
+    <p>
+      The Palace of the Shirvanshahs, considered among the most important examples of local architecture, was built
+      during the reign of Ibrahim Halilullah, the king of the Shirvanshahs.
+    </p>
+
+    <a href="https://en.wikipedia.org/wiki/Maiden_Tower_(Baku)">
+      <H2>Maiden Tower</H2>
+    </a>
+    <img src="images/Maiden.jpg" width="800" title="Maiden Tower" alt="Maiden Tower">
+    <p>
+      Maiden Tower
+      The 27-meter Maiden Tower, thought to be an ancient Zoroastrian temple, was built in the 12th century. The
+      tower, which tells many stories about its history, was used as a lighthouse in the 18th and 19th centuries. The
+      8-story building in the southeastern part of Inside City now houses exhibition stands.
+    </p>
+
+    <a href="https://en.wikipedia.org/wiki/Ateshgah_of_Baku">
+      <H2>Ateshgah Fire Temple</H2>
+    </a>
+    <img src="images/Ateshgah.jpg" width="800" title="Ateshgah" alt="Ateshgah">
+    <p>
+      The Fire Temple, or "Fire Temple", is located in the city of Surakhani, 30 kilometers from the center of Baku.
+      The first structure of the temple, which is one of the 3 remaining Fire-worshipping temples, was built in 1713,
+      and the central shrine was built in 1810. Formerly important places of worship for Zoroastrians, some rooms are
+      now used as museums.
+    </p>
+
+    <a href="https://en.wikipedia.org/wiki/Baku_Boulevard">
+      <H2>Seaside Boulevard</H2>
+    </a>
+    <img src="images/Boulevard.png" width="800" title="Boulevard" alt="Boulevard">
+    <p>
+      Baku Boulevard opened in 1909, runs parallel to the coast of Baku. At the beginning of the
+      century, the region where the oil merchants living in Baku lived was later named Seaside National Park and
+      protected. The boulevard, created by filling the sea, was expanded after gaining independence and turned into an
+      attraction center with museums, monuments and entertainment centers.
+    </p>
+
+    <a href="https://en.wikipedia.org/wiki/Gobustan_State_Historical_and_Cultural_Reserve">
+      <H2>Gobustan National Park</H2>
+    </a>
+    <img src="images/Gobustan.jpg" width="800" title="Gobustan" alt="Gobustan">
+    <p>
+      The national park, whose official name is Gobustan Rock Art Cultural Landscape Area (Gobustan National Park), is
+      located in Baku's 64 kilometers away. A rock that existed 40,000 years ago on the southeastern side of the
+      Caucasus Mountains
+      has bolts. The other one inside the national park, which takes its name from the mountain passes (gobu in the
+      local language) in the region valuable finds about the region by visiting cave settlements and cemeteries
+      you can get information
+    </p>
+  </div>
+
+  <div class="address-table">
+    <table border="0">
+      <thead style="text-align:left; padding-bottom:10px">
+        <tr>
+          <th>PLACES TO VISIT</th>
+          <th>ADDRESSES</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>Walled City ................................................................. </td>
+          <td>9R8M+GX4, Bakı 1000</td>
+        </tr>
+      </tbody>
+
+      <tbody>
+        <tr>
+          <td>Shirvanshahs Palace ................................................... </td>
+          <td>9R8M+CCX, Bakı</td>
+        </tr>
+      </tbody>
+
+      <tbody>
+        <tr>
+          <td>Maiden Tower ............................................................ </td>
+          <td>C285+5CR, Bakı</td>
+        </tr>
+      </tbody>
+
+      <tbody>
+        <tr>
+          <td>Baku Boulevard ......................................................... </td>
+          <td>92 Neftchilar Avenue</td>
+        </tr>
+      </tbody>
+
+      <tbody>
+        <tr>
+          <td>Gobustan ................................................................... </td>
+          <td>496H+H9C, Qobustan</td>
+        </tr>
+      </tbody>
+
+      <foot>
+        <tr>
+          <td colspan="2"></td>
+        </tr>
+      </foot>
+    </table>
+  </div>
+
+  <script type="text/javascript" src="javascript.js"></script>
 </body>
+
 </html>
