Grid added to home page

--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>Places to visit in Bak</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Places to visit in Baku">
+    <meta name="author" content="Gulnara Shahbazova">
+    <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link href="stylesheet.css" rel="stylesheet" type="text/css"></a>
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="stylesheet.css" rel="stylesheet" type="text/css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body id="contact-page">
-    <div class="contact-box">
-        <form action="" method="post" id="" enctype="multipart/form-data"></form>
-        <input type="text" class="input-field" placeholder="Your name">
-        <input type="email" placeholder="Your email" class="input-field">
-        <input type="text" class="input-field" placeholder="Subject">
-        <input type="text-area" placeholder="Your message" class="textarea-field">
-        <button type="submit" class="submit-button"> SUBMIT </button>
+<body id="contact-page"></body>
+<header>
+    <H2 class="logo">Discover <span>Baku</span></H2>
+    <nav>
+        <ul class="social-media">
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+        </ul>
+        <ul class="nav-bar">
+            <li><a href="home.html"> Home </a></li>
+            <li><a href="blog.html"> Blog </a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html"> Contact </a> </li>
+        </ul>
+        <form class="search-box">
+            <input type="search" placeholder="Search">
+            <button type="submit"><i class="fa fa-search" id="search"></i></button>
         </form>
-    </div>
+    </nav>
+</header>
+
+<div class="contact-box">
+    <form action="" method="post" id="" enctype="multipart/form-data"></form>
+    <input type="text" class="input-field" placeholder="Your name">
+    <input type="email" placeholder="Your email" class="input-field">
+    <input type="text" class="input-field" placeholder="Subject">
+    <input type="text-area" placeholder="Your message" class="textarea-field">
+    <button type="submit" class="submit-button"> SUBMIT </button>
+    </form>
+</div>
 </body>
+
 </html>
