--- a/blog.html
+++ b/blog.html
@@ -23,24 +23,24 @@
   <header>
     <H2 class="logo">Discover <span>Baku</span></H2>
     <nav>
-      <form class="search-box">
-        <input type="search" placeholder="Search">
-        <button type="submit"><i class="fa fa-search" id="search"></i></button>
-      </form>
-      <ul class="nav-bar">
-        <li>Home</li>
-        <li>Blog</li>
-        <li>About</li>
-        <li><a href="contact.html"> Contact </a> </li>
-      </ul>
-      <ul class="social-media">
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-      </ul>
+        <ul class="social-media">
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+        </ul>
+        <ul class="nav-bar">
+            <li><a href="home.html"> Home </a></li>
+            <li><a href="blog.html"> Blog </a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html"> Contact </a> </li>
+        </ul>
+        <form class="search-box">
+            <input type="search" placeholder="Search">
+            <button type="submit"><i class="fa fa-search" id="search"></i></button>
+        </form>
     </nav>
-  </header>
+</header>
 
   <div class="article">
     <H1>Places to visit in Baku</H1>
