--- a/about.html
+++ b/about.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-  <title>About</title>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Places to visit in Baku">
-  <meta name="author" content="Gulnara Shahbazova">
-  <meta name="keywords" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="stylesheet.css" rel="stylesheet" type="text/css">
+    <title>About</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Places to visit in Baku">
+    <meta name="author" content="Gulnara Shahbazova">
+    <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="stylesheet.css" rel="stylesheet" type="text/css">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -32,12 +32,38 @@
             <ul class="nav-bar">
                 <li><a href="home.html"> Home </a></li>
                 <li><a href="blog.html"> Blog </a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="active"><a href="about.html">About</a></li>
                 <li><a href="contact.html"> Contact </a> </li>
             </ul>
             <form class="search-box">
-                <input type="search" placeholder="Search">
-                <button type="submit"><i class="fa fa-search" id="search"></i></button>
+                <input type="search" placeholder="Search" id="srch">
+                <button type="submit" id="search"><i class="fa fa-search"></i></button>
             </form>
         </nav>
     </header>
+
+    <div class="about-page">
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Odio, dolore nemo hic rerum non ratione quae, ea
+            aspernatur doloremque molestias voluptate dolor sunt maxime, ab a tenetur quisquam. Vero, impedit.
+        </p>
+    </div>
+</body>
+
+</html>
