--- a/contact.html
+++ b/contact.html
@@ -32,17 +32,17 @@
             <li><a href="home.html"> Home </a></li>
             <li><a href="blog.html"> Blog </a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html"> Contact </a> </li>
+            <li class="active"> <a href="contact.html"> Contact </a> </li>
         </ul>
         <form class="search-box">
-            <input type="search" placeholder="Search">
-            <button type="submit"><i class="fa fa-search" id="search"></i></button>
+            <input type="search" placeholder="Search" id="srch">
+            <button type="submit" id="search"><i class="fa fa-search"></i></button>
         </form>
     </nav>
 </header>
 
 <div class="contact-box">
-    <form action="" method="post" id="" enctype="multipart/form-data"></form>
+    <form action="" method="post" id="contact-form" enctype="multipart/form-data"></form>
     <input type="text" class="input-field" placeholder="Your name">
     <input type="email" placeholder="Your email" class="input-field">
     <input type="text" class="input-field" placeholder="Subject">
