--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 
 <body>
   <header>
-    <H2 class="logo">Discover <span>Baku</span></H2>
+    <H2 class="logo">Discover <span> Baku</span></H2>
     <nav>
         <ul class="social-media">
             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -31,14 +31,14 @@
         </ul>
         <ul class="nav-bar">
             <li><a href="home.html"> Home </a></li>
-            <li><a href="blog.html"> Blog </a></li>
+            <li class="active"><a href="blog.html"> Blog </a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html"> Contact </a> </li>
         </ul>
         <form class="search-box">
-            <input type="search" placeholder="Search">
-            <button type="submit"><i class="fa fa-search" id="search"></i></button>
-        </form>
+          <input type="search" placeholder="Search" id="srch">
+          <button type="submit" id="search"><i class="fa fa-search"></i></button>
+      </form>
     </nav>
 </header>
 
@@ -50,11 +50,7 @@
     </a>
     <img src="images/walled-city.jpg" width="800" title="Walled City" alt="Walled City">
     <p>
-      The Icheri Sheher, which is called the "Old City" by the local people, is a region that
-      travelers must include in their lists of places to visit in Baku, as it preserves many historical structures.
-      Inhabited since the Paleolithic era, the region was recognized as one of the World Heritage Sites in Danger in
-      2003, following its inclusion on the UNESCO World Heritage List in 2000. In the cobbled streets of the old town
-      there is a historic building of Hellenic.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, dolor. Consequuntur optio ad aspernatur earum quod dicta eveniet voluptatum repudiandae? Veritatis voluptate maiores molestias fugiat eius commodi modi corporis porro.
     </p>
 
     <a href="https://en.wikipedia.org/wiki/Palace_of_the_Shirvanshahs">
@@ -62,8 +58,7 @@
     </a>
     <img src="images/Shirvanshahlar.jpg" width="800">
     <p>
-      The Palace of the Shirvanshahs, considered among the most important examples of local architecture, was built
-      during the reign of Ibrahim Halilullah, the king of the Shirvanshahs.
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique perferendis at autem mollitia molestias. Natus placeat, assumenda modi quidem quia nam omnis doloremque, odit esse illum sit explicabo, vel minus.
     </p>
 
     <a href="https://en.wikipedia.org/wiki/Maiden_Tower_(Baku)">
@@ -71,10 +66,7 @@
     </a>
     <img src="images/Maiden.jpg" width="800" title="Maiden Tower" alt="Maiden Tower">
     <p>
-      Maiden Tower
-      The 27-meter Maiden Tower, thought to be an ancient Zoroastrian temple, was built in the 12th century. The
-      tower, which tells many stories about its history, was used as a lighthouse in the 18th and 19th centuries. The
-      8-story building in the southeastern part of Inside City now houses exhibition stands.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem unde blanditiis amet. Earum aliquam, architecto nobis alias aperiam autem voluptatem natus molestiae, repellat dolorem maiores. Tempore magnam eum atque commodi!
     </p>
 
     <a href="https://en.wikipedia.org/wiki/Ateshgah_of_Baku">
@@ -82,10 +74,7 @@
     </a>
     <img src="images/Ateshgah.jpg" width="800" title="Ateshgah" alt="Ateshgah">
     <p>
-      The Fire Temple, or "Fire Temple", is located in the city of Surakhani, 30 kilometers from the center of Baku.
-      The first structure of the temple, which is one of the 3 remaining Fire-worshipping temples, was built in 1713,
-      and the central shrine was built in 1810. Formerly important places of worship for Zoroastrians, some rooms are
-      now used as museums.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero cumque neque aliquam, voluptatum molestias voluptatem molestiae quos, unde magnam, laborum necessitatibus sit impedit exercitationem laudantium nihil harum odit dolor. Earum.
     </p>
 
     <a href="https://en.wikipedia.org/wiki/Baku_Boulevard">
@@ -93,10 +82,7 @@
     </a>
     <img src="images/Boulevard.png" width="800" title="Boulevard" alt="Boulevard">
     <p>
-      Baku Boulevard opened in 1909, runs parallel to the coast of Baku. At the beginning of the
-      century, the region where the oil merchants living in Baku lived was later named Seaside National Park and
-      protected. The boulevard, created by filling the sea, was expanded after gaining independence and turned into an
-      attraction center with museums, monuments and entertainment centers.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quod dignissimos voluptates, eaque exercitationem molestias corrupti aliquam at saepe aliquid ipsam omnis magnam veniam accusamus laborum rem, repudiandae reprehenderit nam?
     </p>
 
     <a href="https://en.wikipedia.org/wiki/Gobustan_State_Historical_and_Cultural_Reserve">
@@ -104,12 +90,7 @@
     </a>
     <img src="images/Gobustan.jpg" width="800" title="Gobustan" alt="Gobustan">
     <p>
-      The national park, whose official name is Gobustan Rock Art Cultural Landscape Area (Gobustan National Park), is
-      located in Baku's 64 kilometers away. A rock that existed 40,000 years ago on the southeastern side of the
-      Caucasus Mountains
-      has bolts. The other one inside the national park, which takes its name from the mountain passes (gobu in the
-      local language) in the region valuable finds about the region by visiting cave settlements and cemeteries
-      you can get information
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus autem, voluptate iusto fugit assumenda dignissimos nemo, earum alias odit aspernatur enim repellat ad accusamus doloribus ullam incidunt quasi corrupti? Id?
     </p>
   </div>
 
