--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
             <li><a href="#"><i class="fa fa-youtube"></i></a></li>
         </ul>
         <ul class="nav-bar">
-            <li><a href="home.html"> Home </a></li>
+            <li><a href="index.html"> Home </a></li>
             <li class="active"><a href="blog.html"> Blog </a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html"> Contact </a> </li>
