--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="#"><i class="fa fa-youtube"></i></a></li>
             </ul>
             <ul class="nav-bar">
-                <li class="active"> <a href="home.html"> Home </a></li>
+                <li class="active"> <a href="index.html"> Home </a></li>
                 <li><a href="blog.html"> Blog </a></li>
                 <li><a href="about.html"> About </a></li>
                 <li><a href="contact.html"> Contact </a> </li>
